managed/e2e/components/portal/base/ingress-portal.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: portal
  namespace: e2e
  # annotations:
  #  nginx.ingress.kubernetes.io/backend-protocol: https # ingress-nginx
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - american-broomstick.com
      secretName: portal-tls
  rules:
    - host: american-broomstick.com
      http:
        paths: 
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portal-static-webserver
                port:
                  number: 80
