managed/e2e/components/portal/base/svc-portal-static-webserver.yaml
---
kind: "Service"
apiVersion: "v1"
metadata:
  name: "portal-static-webserver"
  namespace: e2e
spec:
  selector:
    app: e2e
    component: portal
    container: static
  ports:
    - name: "webserver"
      protocol: "TCP"
      port: 80
